# Flight-Cost-Predict

./: Dockerfile  README.md  app.py  forms.py  main.py  model-training.ipynb  pyproject.toml  requirements.txt  schemas.py
flask_ml/: pyvenv.cfg
flask_ml/Scripts/: activate  activate.bat  jsonpointer
templates/: home.html  layout.html  predict.html
