[project]
name = "flight-cost-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.9",
    "feature-engine>=1.9.3",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "scikit-learn==1.5.1",
    "uvicorn>=0.38.0",
]
